--- a/Style.css
+++ b/Style.css
@@ -1,160 +1,8 @@
-﻿#B
-{
-    padding-top: 60pt;
-    display: flex;
-    flex-direction: column;
-}
+﻿
 *{
+    padding: 0%;
     margin: 0%;
-    padding: 0px;
-    
 }
-#top, #mid, #bottom
-{
-    text-align: center;
-    align-items: center;
-    padding-bottom: 150px;
-    flex-direction: column;
-    direction: flex;
-}
-
-.lp 
-{
-    background-color: #FFEBC1;
-}
-#img img
-{
-    
-    border: none;
-    border-radius: 50%;
-}
-#work img
-{
-    float: left;
-    padding-right: 30px;
-    height: 60px;
-}
-.info
-{
-    padding-top: 50px;
-    text-align: center;
-    background-color: #fff;
-}
-#eop
-{
-    text-align: center;
-    background-color: #FFEBC1;
-    padding: 50px;
-}
-.button
-{
-    align-items: center;
-    text-align: center;
-    font-family:'EB Garamond', serif;
-    font-size: 28px;
-    display: flex;
-    flex-direction: column;
-}
-.button a
-{
-    background: linear-gradient(to top, #c79081 0%, #dfa579 100%);
-    margin: 0px;
-    width: 100px;
-    height: 40px;
-    border-radius: 6px;
-    text-align: center;
-    justify-items: center;
-}
-#work
-{
-    justify-items: center;
-    align-items: center;
-    padding: 0% 35% 0% 35% ;
-    justify-content: center;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-}
-#ed
-{   width: 50%;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-}
-h1
-{
-    font-family: 'EB Garamond', serif;
-    color: #8E3200;
-    font-size:6em ;
-    font-weight: bolder;
-}
-h2
-{
-    font: size 5em;
-    font-family: 'EB Garamond', serif;
-    color: #8E3200;
-}
-h3
-{
-    font-family: 'EB Garamond', serif;
-    color: #8E3200;
-    font-size: 4em;
-}
-h4
-{
-    font-family: 'EB Garamond', serif;
-    color: #8E3200;
-    font-size: 2em;
-}
-h5
-{
-    font-family: 'EB Garamond', serif;
-    color: #8E3200;
-    font-size: 24pt;
-}
-h6
-{
-    font-family: 'EB Garamond', serif;
-    color: #8E3200;
-    font-size: 22pt;
-}
-hr
-{
-    border: 0;
-    color: #8E3200;
-    height: 4px;
-    opacity: 100%;
-}
-footer
-{
-    text-align: center;
-}
-a:link
-{
-    margin: 40px 40px 20px 40px;
-    text-decoration: none;
-    color: #8E3200;
-}
-a:hover
-{
-    font-size: larger;
-}
-a:visited
-{
-    color: #8E3200;
-}
-p {
-    
-    display: flex;
-    flex-direction: column;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-.button h4
-{
-    color: #fff;
-    font-size: 18px;
+.navbar .bg-primary{
+    background-color:#F32464;
 }
