--- a/templates/content.html
+++ b/templates/content.html
@@ -1,16 +1,28 @@
 {% include "header.html" %}
 
-
 <div class="container">
-    {% for post in posts %}
-    <div class="bg-body-tertiary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-        <div class="my-3 p-3">
-            <h2 class="display-5">{{api.h}}</h2>
-            <p class="lead">{{api.p}}</p>
-        </div>
+  <!-- {% for data in api %}
+
+  <div class="card" style="width: 18rem">
+    <img src="../static/images/{{data.img}}" class="card-img-top" alt="..." />
+    <div class="card-body">
+      <h5 class="card-title">{{data.h}}</h5>
+      <p class="card-text">{{data.p}}</p>
     </div>
-    {% endfor %}
+  </div>
+
+  {% endfor %} -->
+
+  <div id="Cards" class="card" style="width: 18rem;">
+    {%for data in api:%}
+    <img src="../static/images/{{data.img}}" class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">{{data.h}}</h5>
+      <p class="card-text">{{data.p}}</p>
+    </div>
+    {%endfor%}
+    <a href="" class="btn btn-primary">View Certificate</a>
+  </div>
+
 </div>
-
-
 {% include "footer.html" %}
