--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
 
     <header class="d-flex justify-content-center py-3" id ="header">
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="home" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="Qualification" class="nav-link">Qualification</a></li>
             <li class="nav-item"><a href="Services" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="Contact" class="nav-link">Contact</a></li>
