--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <div class="container my-5">
     <div class="p-5 text-center bg-body-tertiary rounded-4">
         <img src="{{url_for('static', filename='images/Abdullah Shaikh.jpg')}}" class="pfp puff-in-center">
-        <h1 class="text-body-emphasis text-focus-in">Shaikh Abdullah</h1>
+        <h1 class="text-body-emphasis text-focus-in"><b>Abdullah Shaikh</b></h1>
         <p class="col-lg-8 mx-auto fs-5 text-muted tracking-in-expand ">
             Student of Computer Science Engineering specialized in Artificial Intelligence
             and Machine Learning.
