--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,8 @@
         <input type="text" placeholder="Name" name="name" required>
         <input type="text" placeholder="Email" name="email" required>
         <input type="tel" placeholder="Contact Number" name="contact" required>
-        <textarea name="message" id="message" rows="8" placeholder="What's on your mind" required></textarea>
+        <textarea name="message" id="message" rows="8" placeholder="What's on your mind (max. 500 words)" required></textarea>
+        <button type="button" class="btn btn-secondary"><i class="fa-solid fa-paper-plane-top"></i>Send</button>
     </form>
 
 </div>
