--- a/static/CSS/main.css
+++ b/static/CSS/main.css
@@ -27,7 +27,7 @@ a.nav-link {
     border-radius: 10%;
 }
 
-#footer{
+#footer {
     font-family: 'Merriweather', serif;
 }
 
@@ -37,23 +37,26 @@ a.nav-link {
     width: 80%;
     height: 300px;
     border-radius: 21px 21px 0 0;
-    
+
 }
-#Cards{
+
+#Cards {
 
     margin: 10px;
 
 }
-#Form{
+
+#Form {
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+
 }
-form{
+
+form {
     display: flex;
     flex-direction: column;
     height: max-content;
@@ -63,7 +66,8 @@ form{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 21px;
 }
-input{
+
+input {
     padding: 2vw 4vw;
     height: 2vw;
     border: none;
@@ -71,23 +75,37 @@ input{
     margin: 20px;
     display: flex;
 }
-textarea{
+
+textarea {
     margin: 25px;
     padding: 2vw;
     border: none;
     border-radius: 21px;
     display: flex;
+    height: 100px;
 }
-label{
-    margin:20px;
+
+label {
+    margin: 20px;
 }
+
+.btn {
+    width: 90px;
+    height: 35px;
+    align-self: center;
+    margin: 10px;
+    border-radius: 21px ;
+}
+
 /* Text animations */
 .tracking-in-expand {
     animation-delay: 2s;
     -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
     animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
-
+.bg-pan-left {
+    animation: bg-pan-left 8s ease-in alternate-reverse both;
+}
 .puff-in-center {
     animation-delay: 1s;
     animation: puff-in-center 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
@@ -153,17 +171,13 @@ label{
     }
 }
 
-/* background animation */
-
-.bg-pan-left {
-	animation: bg-pan-left 8s ease-in alternate-reverse both;
-}
 
 @keyframes bg-pan-left {
     0% {
-      background-position: 100% 50%;
+        background-position: 100% 50%;
     }
+
     100% {
-      background-position: 0% 50%;
+        background-position: 0% 50%;
     }
-  }
+}
