--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,21 @@
         </p>
         <div class="d-inline-flex gap-2 mb-5">
         </div>
+        <div id="Quote">
+
+            <i class="fa-solid fa-quote-left" ></i>
+            <div id="quote">
+            </div>
+            <i class="fa-light fa-wave-sine"></i>
+            <div id="author">
+            </div>
+            <i class="fa-solid fa-quote-right" id="right"></i>
+            </i>
+            
+            
+        </div>
     </div>
 </div>
+
 
 {% include "footer.html" %}
