--- a/templates/services.html
+++ b/templates/services.html
@@ -9,65 +9,62 @@
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">
-              ₹5000
+              ₹5000*
               <br />
               <small class="text-body-secondary fw-light">
-                Hosting Not included</small
-              >
+                per website
+              </small>
             </h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li>3 Revisions Free <br />later ₹1000 per Revision</li>
-              <li>Hosting as per cost of domain cost</li>
+              <li>
+                Hosting as per cost of
+                <br>domain cost
+              </li>
               <li>Email support</li>
               <li>5 Years</li>
             </ul>
             <a href="Contact">
-              <button id="Contact" type="button" class="w-100 btn">
-                Contact
-              </button>
+              <button id="button" type="button" class="btn btn-secondary">Get Quotation</button>
             </a>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card mb-4 rounded-3 shadow-sm" aria-disabled="true">
           <div class="card-header py-3">
-            <h4 class="my-0 fw-normal">Pro</h4>
+            <h4 class="my-0 fw-normal">Desktop Application</h4>
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">
-              $15<small class="text-body-secondary fw-light">/mo</small>
+              ₹ Coming Soon <br> <small class="text-body-secondary fw-light">per Application</small>
             </h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>20 users included</li>
-              <li>10 GB of storage</li>
+              <li>Complete desktop application</li>
+              <li>3 Revisions Free, <br>later ₹1000 per Revision</li>
               <li>Priority email support</li>
               <li>Help center access</li>
+              <li>5 Years free support</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">
-              Get started
-            </button>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm border-primary">
-          <div class="card-header py-3 text-bg-primary border-primary">
-            <h4 class="my-0 fw-normal">Enterprise</h4>
+        <div class="card mb-4 rounded-3 shadow-sm" aria-disabled="true">
+          <div class="card-header py-3">
+            <h4 class="my-0 fw-normal">Freelance AI & ML work</h4>
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">
-              $29<small class="text-body-secondary fw-light">/mo</small>
+              ₹ Coming Soon <br> <small class="text-body-secondary fw-light">per Application</small>
             </h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>30 users included</li>
-              <li>15 GB of storage</li>
-              <li>Phone and email support</li>
+              <li>Complete desktop application</li>
+              <li>3 Revisions Free, <br>later ₹1000 per Revision</li>
+              <li>Priority email support</li>
               <li>Help center access</li>
+              <li>5 Years free support</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">
-              Contact us
-            </button>
           </div>
         </div>
       </div>
