--- a/static/CSS/main.css
+++ b/static/CSS/main.css
@@ -93,12 +93,12 @@ label {
 /* #Contact{
 
 } */
-=======
-.card {
+
+/* .card {
     width: 100%;
     height: 500px;
-}
->>>>>>> 7244b1e99b66a27ff5971e4f464a24d49ae3e43d
+} */
+
 
 .btn {
     width: 90px;
