--- a/templates/content.html
+++ b/templates/content.html
@@ -1,5 +1,14 @@
 {% include "header.html" %}
-
-
+{% for  %}
+<div class="container">
+    <div class="card mt-4 " style="width: 18rem;">
+        <img src="" class="card-img-top" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick exam</p>
+        </div>
+      </div>
+    
+</div>
 
 {% include "footer.html" %}
