--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,8 +7,9 @@
             <h1><b>Get in Touch</b></h1>
         </label>
         <input type="text" placeholder="Name" name="name" required>
-        <input type="text" placeholder="Email" name="email" required>
+        <input type="email" placeholder="Email" name="email" required>
         <input type="tel" placeholder="Contact Number" name="contact" required>
+        <input type="text" placeholder="Subject" name="subject" required>
         <textarea name="message" id="message" rows="8" placeholder="What's on your mind (max. 500 words)" required></textarea>
         <button type="button" class="btn btn-secondary"><i class="fa-solid fa-paper-plane-top"></i>Send</button>
     </form>
