--- a/templates/header.html
+++ b/templates/header.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital@1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Satisfy&display=swap"
         rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='CSS/main.css')}}">
 
     <title>Abdullah Shaikh</title>
