--- a/templates/content.html
+++ b/templates/content.html
@@ -1,8 +1,8 @@
 {% include "header.html" %}
-{% for  %}
+{% for row in  %}
 <div class="container">
     <div class="card mt-4 " style="width: 18rem;">
-        <img src="" class="card-img-top" alt="">
+        <img src="data:image/webp; charset=utf-8;base64,{{}}" class="card-img-top" alt="PYTHON">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick exam</p>
